feat: Key import endpoint, returning data, removing screenshots - fix tests