@@ -143,6 +143,7 @@ task ktlintFormat(type: JavaExec, group: "formatting") {
     classpath = configurations.ktlint
     main = "com.pinterest.ktlint.Main"
     args "-F", "**/*.kt", "!**/data/PluralData.kt", '../billing/**/*.kt'
+    jvmArgs = ["--add-opens=java.base/java.lang=ALL-UNNAMED"]
 }
 
 subprojects {
